[package]
name = "oct"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oct"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
dirs = "5"
walkdir = "2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
tar = "0.4"
regex = "1"
